--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+    max-width: 1fr;
+    margin: 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
